fixed reset button starting to work on mobile view

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,10 +1,41 @@
-$primary: rgb(71, 102, 53);
 $accent: rgb(48, 25, 70);
-$black: rgb(0, 0, 0);
+
+@keyframes left-slide {
+  0% {
+    transform: translateX(1300px);
+  }
+  70% {
+    transform: translateX(-100px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+@keyframes right-slide {
+  0% {
+    transform: translateX(-1300px);
+  }
+  70% {
+    transform: translateX(100px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+@keyframes slide-in {
+  0% {
+    transform: translateY(500px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
 
 html {
   cursor: initial;
-  scroll-behavior: none;
+  scroll-behavior: smooth;
   overflow: hidden;
 }
 
@@ -13,17 +44,18 @@ body {
   padding: 0px;
   background-color: $accent;
   color: white;
-  font-family: "Roboto", sans-serif;
+  font-family: "basic-sans", sans-serif;
 }
 
 .header {
+  width: 100%;
   display: flex;
   flex-direction: column;
   text-align: center;
   justify-content: center;
   align-content: center;
-  font-size: 30px;
-  stroke: 3px $black;
+  font-size: 160%;
+  stroke: 3px black;
   background-color: white;
   color: black;
   border: 1px solid black;
@@ -116,37 +148,4 @@ label {
   width: 100%;
   font-size: 50px;
   padding-bottom: 2px;
-}
-
-@keyframes left-slide {
-  0% {
-    transform: translateX(1300px);
-  }
-  70% {
-    transform: translateX(-100px);
-  }
-  100% {
-    transform: translateX(0px);
-  }
-}
-
-@keyframes right-slide {
-  0% {
-    transform: translateX(-1300px);
-  }
-  70% {
-    transform: translateX(100px);
-  }
-  100% {
-    transform: translateX(0px);
-  }
-}
-
-@keyframes slide-in {
-  0% {
-    transform: translateY(500px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
 }
